# UlSWaP-Bench

./: .gitignore  CMakeLists.txt  LED.c  LED.s  Makefile.mk  README.md  bareBench.h  buildAll.sh  memmap  putget.s  supportFuncs.c
adpcm_decode/: Makefile  adpcm.h  libst.h
adpcm_encode/: Makefile  adpcm.c  input.h
aes/: Makefile  main.c
arch/arm/: Makefile.mk  supportFuncs.c
arch/msp430/: config.cmake  memmap.ld  supportFuncs.c  vectors.S
arch/native/: Makefile.mk  config.cmake
arch/riscv/: Makefile.mk  config.cmake
arch/spike/: README.md  config.cmake
basicmath/: Makefile  cubic.c  isqrt.c  main.c  pi.h  round.h  snipmath.h
bitcount/: Makefile  bitcnt_1.c  bitcnt_2.c  bitcnt_3.c  bitcnt_4.c  bitcnts.c  bitops.h  bstr_i.c  extkword.h  sniptype.h
blowfish/: Makefile  blowfish.c  blowfish.h  blowfish_test.c  input.h
chacha20/: ChaCha20.h  Makefile  main.c
crc/: Makefile  crc.h  main.c
dijkstra/: Makefile  dijkstra.c
ecc/: Makefile  curve.h  ecdh.c  ecdh.h  main.c  readme.md
fft/: Makefile  ddc.h  fftmisc.c  fourierf.c  main.c  temp
hw/arm6/: config.cmake  supportFuncs.c
hw/arm7/: config.cmake  memmap.ld  vectors.S
hw/msp430fr5994/: PICOLIBC_BUILD.txt  config.cmake  memmap.ld  supportFuncs.c  vectors.S
hw/native/: config.cmake
hw/riscv/: config.cmake  memmap.ld  supportFuncs.c  vectors.S
hw/rv32im/: config.cmake  memmap.ld  vectors.S
hw/rv32imfd/: config.cmake  supportFuncs.c
hw/spike/: memmap.ld  supportFuncs.c
hw/tm4c123/: PICOLIBC_BUILD.txt  config.cmake  supportFuncs.c  tm4c123gh6pm_startup_ccs_gcc.c
ld/: msp430fr5994_no_lea.ld
limits/: Makefile  limit_test.c  limit_test.stuff.c
lzfx/: Makefile  lzfx_decomp_test.c
native/: Makefile.mk  supportFuncs.c
overflow/: Makefile  notmain.c
overflow/riscv/: test.s
patricia/: Makefile  patricia.c  patricia.h  patricia_test.c
picojpeg/: Makefile  bintoc.c  host.c  picojpeg.h  picojpegtest.c
qsort/: Makefile  input_large.h
randmath/: Makefile  notmain.c  randmath.c
rc4/: Makefile  rc4test.c  testdata.h
riscv/: Makefile.mk  device.ld  memmap.ld  putget.S  putget.s  spike.ld  supportFuncs.c  vectors.S  vectors.s
rsa/: Makefile  bn.c  bn.h  key512.pem  main.c  pub512.pem  rsa_test.c  rsa_test.h  temp
sha/: Makefile  input.h  main.c  sha.c  sha.h
sha256/: Makefile  input.h  main.c  sha256.c  sha256.h
spike/: Makefile.mk  supportFuncs.c  vectors.s
src/: bareBench.h  bintoh.c  checksum.c  common.c  common.h  dickens.txt  image_input.h  image_input.pgm  mainmain.c  text_input_16k.h  text_input_1k.h  text_input_32k.h  text_input_64k.h
src/activity_rec/: CMakeLists.txt  main.c
src/activity_recognition/: CMakeLists.txt  main.c
src/adl/: CMakeLists.txt  adl_model.h  data.h  main.c
src/adpcm_decode/: CMakeLists.txt  Makefile  input.h  rawdaudio.c
src/adpcm_encode/: CMakeLists.txt  Makefile  adpcm-lib.c  adpcm-lib.h  adpcm_encode_test.c  input.h  rawcaudio.c
src/aes/: CMakeLists.txt  Makefile  aes.c  aes.h  main.c
src/anomaly/: CMakeLists.txt  data.h  main.c  svm.c  svm.h
src/ar/: CMakeLists.txt  main.c
src/basicmath/: CMakeLists.txt  Makefile  cubic.c  main.c  pi.h  rad2deg.c  snipmath.h  sniptype.h
src/bitcount/: CMakeLists.txt  Makefile  bitcnt_1.c  bitcnt_4.c  bitcnts.c  bitstrng.c  main.c
src/blowfish/: CMakeLists.txt  Makefile  blowfish.c  blowfish.h  blowfish_test.c  input.h
src/chacha20/: CMakeLists.txt  ChaCha20.h  Makefile  main.c
src/crc/: CMakeLists.txt  Makefile  crc.c  crc.h  main.c
src/dijkstra/: CMakeLists.txt  Makefile  datToH.py  dijkstra.c  gen_input.py  input.h
src/ecc/: CMakeLists.txt  Makefile  curve.h  ecdh.h  main.c
src/echo/: CMakeLists.txt  main.c
src/fft/: CMakeLists.txt  Makefile  fftmisc.c  fourier.h  fourierf.c  main.c
src/image_class/: CMakeLists.txt  arch_cpu.h  main.c  tm_layers.c  tm_model.c  tm_port.h
src/jpeg_decode/: CMakeLists.txt  jpeg_decode_test.c  picojpeg.c
src/jpeg_encode/: CMakeLists.txt  buf.c  buf.h  conf.c  conf.h  enc.c  enc.h  huff.c  huff.h  input.h  jpec.h  jpeg_encode_test.c  torg.data
src/limits/: CMakeLists.txt  Makefile  limit_test.c  limit_test.stuff.c
src/lorawan_down/: CMakeLists.txt  inputs.c  inputs.h  loragw_hal.h  lorawan_down_test.c  lw-macro.h  lw.c  lw.h
src/lorawan_up/: CMakeLists.txt  aes.c  inputs.h  loragw_hal.h  lorawan_up_test.c  lw.c  lw.h
src/lzfx/: CMakeLists.txt  Makefile  lzfx.c  lzfx.h  lzfx_decomp.c  lzfx_decomp_test.c
src/lzfx_comp/: CMakeLists.txt  dickens.txt  input.h  lzfx.c  lzfx_compress_test.c
src/lzfx_compress/: CMakeLists.txt  input.h  lzfx.c  lzfx.h  lzfx_compress_test.c
src/lzfx_decomp/: CMakeLists.txt  lzfx.c  lzfx_decomp_test.c
src/lzfx_decompress/: CMakeLists.txt  input.h  lzfx.h  lzfx_decomp_test.c
src/mp3_encode/: CMakeLists.txt  input.h  mp3_encode_test.c  shine_mp3.c  shine_mp3.h
src/neural_net/: CMakeLists.txt  data.h  main.c  tm_layers.c  tm_model.c  tm_stat.c  weights.h
src/neural_net/core/: nnom.c
src/neural_net/include/: tinymaix.h  tm_port.h
src/overflow/: Makefile
src/patricia/: CMakeLists.txt  Makefile  input.h  patricia.c  patricia.h  patricia_test.c  small.udp  udpToH.py
src/picojpeg/: CMakeLists.txt  Makefile  bintoc.c  jpeg_input.h  picojpeg.c  picojpegtest.c
src/poly1305/: CMakeLists.txt  main.c  poly1305.c  poly1305.h
src/qsort/: CMakeLists.txt  Makefile  datToH.py  input.h  input_large.h  qsort.c  qsort_large.c
src/randmath/: CMakeLists.txt  Makefile  main.c  randmath.c
src/rc4/: CMakeLists.txt  Makefile  rc4test.c
src/rsa/: CMakeLists.txt  Makefile  README.md  bn.c  bn.h  key.pem  main.c  rsa_test.c  rsa_test.h
src/sensor_fusion/: CMakeLists.txt  c6h6_model.h  data.h  main.c
src/sha256/: CMakeLists.txt  Makefile  input.h  main.c
src/stringsearch/: CMakeLists.txt  Makefile  main.c
src/susan/: CMakeLists.txt  Makefile  susan.c
src/susan_corners/: CMakeLists.txt  (+3 more)
stringsearch/: Makefile  main.c
susan/: Makefile  susan.c
test/: check_output.py  hash.h  md5.c  md5.h
tools/: bintoh.c
tools/analysis/IR/: BasicBlockInstCounter.cpp  BasicBlockInstCounter.h  CMakeLists.txt
(+112 files in other folders)
